--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "mapbox-gl-js-mock": "^1.0.2"
+  }
 }
